@@ -6,7 +6,7 @@
  */
 
 %token EOL NUMBER LITERAL CHARSET KEYMAPS KEYCODE EQUALS
-%token PLAIN SHIFT CONTROL ALT ALTGR SHIFTL SHIFTR CTRLL CTRLR
+%token PLAIN SHIFT CONTROL ALT ALTGR SHIFTL SHIFTR CTRLL CTRLR CAPSSHIFT
 %token COMMA DASH STRING STRLITERAL COMPOSE TO CCHAR ERROR PLUS
 %token UNUMBER ALT_IS_META STRINGS AS USUAL ON FOR
 
@@ -189,6 +189,7 @@ modifier	: SHIFT		{ mod |= M_SHIFT;	}
 		| SHIFTR	{ mod |= M_SHIFTR;	}
 		| CTRLL		{ mod |= M_CTRLL;	}
 		| CTRLR		{ mod |= M_CTRLR;	}
+		| CAPSSHIFT	{ mod |= M_CAPSSHIFT;	}
 		;
 fullline	: KEYCODE NUMBER EQUALS rvalue0 EOL
 	{
