@@ -8,6 +8,7 @@ kbd-chooser (1.44) UNRELEASED; urgency=low
 
   [ Jérémy Bobbio ]
   * Fix mispositioned arguments in the PLAIN rule in loadkeys.
+  * Add support for parsing "CapsShift" in keymaps.  (Closes: #490611)
 
  -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 08:47:11 +0200
 
